# clink-db

./: CMakeLists.txt  README.md  libmagic.pc
binary/: clink-db  search_symbol.sh  vim-cat
clink/: CMakeLists.txt
clink/src/: CX_CursorKind.1  argvx.c  argvx.h  build.c  clink-db.1  file_queue.c  help.c  helpx.c  helpx.h  main.c  option.c  option.h  path.c  path.h  work_queue.c
libclink/: CMakeLists.txt
libclink/include/clink/: c.h  symbol.h
libclink/src/: compiler_ast.c  compiler_ast.h  db_add_symbol.c  db_open.c  parse_c.c  symbol.c  temp_file.c  temp_file.h
script2ctags/: search_symbol.sh
